examples/test/testpolicy8090.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8090
  namespace: namespace300
spec:
  podSelector:
    matchLabels:
      key49: value15
      key33: value1
      key16: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value28
      podSelector:
        matchLabels:
          key4: value28
          key16: value11
